<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    <EditText
        android:id="@+id/ed_register_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name_hint_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <com.bangkit23.storygram.ui.customView.EmailEditText
        android:id="@+id/ed_register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        app:layout_constraintEnd_toEndOf="@+id/ed_register_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_register_name"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_name" />

    <com.bangkit23.storygram.ui.customView.EditTextPasswordLogin
        android:id="@+id/ed_register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        app:layout_constraintEnd_toEndOf="@+id/ed_register_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_register_email"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_email" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/register_button_text"
        android:backgroundTint="#425AD6"
        app:layout_constraintEnd_toEndOf="@+id/ed_register_password"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/ed_register_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>