<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="246dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toTopOf="@id/nama"
            tools:srcCompat="@tools:sample/avatars" />
        <ProgressBar
            android:id="@+id/progress_bar_story_item"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toTopOf="@id/nama"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_hint_register"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="@id/photo"
            card_view:layout_constraintStart_toStartOf="@id/photo"
            card_view:layout_constraintTop_toBottomOf="@+id/photo"
            card_view:layout_constraintBottom_toTopOf="@id/deskripsi" />

        <TextView
            android:id="@+id/deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_panjang"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:maxLines="1"
            android:ellipsize="end"
            card_view:layout_constraintStart_toStartOf="@id/nama"
            card_view:layout_constraintTop_toBottomOf="@id/nama"
            card_view:layout_constraintBottom_toTopOf="@id/tanggal" />

        <TextView
            android:id="@+id/tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_text_details"
            android:textSize="11sp"
            android:textColor="@color/color_text_date"
            card_view:layout_constraintTop_toBottomOf="@id/deskripsi"
            card_view:layout_constraintStart_toStartOf="@id/deskripsi"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>